== master

* Only initialize states if state is blank and blank is not a valid state
* Fix instance / class helpers failing when used with certain libraries (such as Thin)

== 0.10.1 / 2011-03-22

* Fix classes with multiple state machines failing to initialize in ActiveRecord / Mongoid / Sequel integrations

== 0.10.0 / 2011-03-19

* Support callback terminators in MongoMapper 0.9.0+
* Fix pluralization integration on DataMapper 1.0.0 and 1.1.0
* Allow transition guards to be bypassed for event / transition / path helpers
* Allow state / condition requirements to be specified for all event / transition / path helpers
* Add the ability to skip automatically initializing state machines on #initialize
* Add #{name}_paths for walking the available paths in a state machine
* Add Mongoid 2.0.0+ support
* Use around hooks to improve compatibility with other libraries in ActiveModel / ActiveRecord / MongoMapper integrations
* Add support for MassAssignmentSecurity feature in ActiveModel integrations
* Add support for more observer hooks within MongoMapper integrations
* Add i18n support for MongoMapper validation errors
* Update support for MongoMapper integration based on rails3 branch
* Fix objects not getting marked as dirty in all integrations when #{name}_event is set
* Generate warnings when conflicting state / event names are detected
* Allow fallback to generic state predicates when individual predicates are already defined in the owner class
* Replace :include_failures after_transition option with new after_failure callback
* Provide access to transition context when raising InvalidEvent / InvalidTransition exceptions

== 0.9.4 / 2010-08-01

* Fix validation / save hooks in Sequel 3.14.0+
* Fix integration with dirty attribute tracking on DataMapper 1.0.1+
* Fix DataMapper 1.0.1+ tests producing warnings
* Fix validation error warnings in ActiveModel / ActiveRecord 3.0.0 beta5+