@@ -2129,7 +2129,7 @@ class MachineWithExistingMachinesWithSameAttributesOnOwnerClassTest < Test::Unit
   def setup
     @klass = Class.new
     @machine = StateMachine::Machine.new(@klass, :initial => :parked)
-    @second_machine = StateMachine::Machine.new(@klass, :public_state, :attribute => :state)
+    @second_machine = StateMachine::Machine.new(@klass, :public_state, :initial => :idling, :attribute => :state)
     @object = @klass.new
   end
   
@@ -2138,8 +2138,28 @@ class MachineWithExistingMachinesWithSameAttributesOnOwnerClassTest < Test::Unit
     assert_equal expected, @klass.state_machines
   end
   
-  def test_should_initialize_based_on_first_available_initial_state
+  def test_should_write_to_state_only_once
+    @klass.class_eval do
+      attr_reader :write_count
+      
+      def state=(value)
+        @write_count ||= 0
+        @write_count += 1
+      end
+    end
+    object = @klass.new
+    
+    assert_equal 1, object.write_count
+  end
+  
+  def test_should_initialize_based_on_first_machine
     assert_equal 'parked', @object.state
+  end
+  
+  def test_should_not_allow_second_machine_to_initialize_state
+    @object.state = nil
+    @second_machine.initialize_state(@object)
+    assert_nil @object.state
   end
   
   def test_should_allow_transitions_on_both_machines
