@@ -1,5 +1,6 @@
 == master
 
+* Fix attributes getting initialized more than once if different state machines use the same attribute
 * Only initialize states if state is blank and blank is not a valid state
 * Fix instance / class helpers failing when used with certain libraries (such as Thin)
 
